@@ -1,4 +1,5 @@
 body       {background-color:#fffffe;
+            line-height:100%;
             margin-top:5px;
             margin-right:5px;
             margin-left:5px;
@@ -10,12 +11,13 @@ h1         {color:#faf5f5;
             border-width:1px;
             border-color:#555555;
             padding-left:20px;
-            padding-top:5px;
-            padding-bottom:5px;
+            padding-top:15px;
+            padding-bottom:15px;
             background-color:63706f;
+            line-height:100%;
             font-family:sans-serif;
             font-weight:bold;
-            font-size:16pt;
+            font-size:20pt;
             text-align:center;}
 
 h2         {color:#300505;
@@ -25,18 +27,19 @@ h2         {color:#300505;
             border-width:1px 1px 1px 10px;
             border-color:#000000;
             padding-left:10px;
-            padding-top:2px;
-            padding-bottom:2px;
+            padding-top:10px;
+            padding-bottom:6px;
             background-color:#bbd5c5;
             font-family:sans-serif;
-            font-size:14pt;}
+            font-size:16pt;}
             
 h3         {color:#003366;
             margin:3pt 15pt;
             font-family:sans-serif;
-            font-size:12pt;}
+            font-size:14pt;}
 
-li         {margin:12pt 0pt 0pt 0pt;}
+li         {margin:12pt 0pt 0pt 0pt;
+            font-family:sans-serif;}
             
 ul.level1  {color:#000000;
             margin-left:30px;
@@ -46,16 +49,19 @@ ul.level1  {color:#000000;
             list-style-position:inside;
             padding-left:0px;
             font-weight:bold;
-            font-size:14pt;}
+            font-family:sans-serif;
+            font-size:16pt;}
 
 dl         {margin-left:30px;
             margin-top:10px;
             margin-right:10px;
             margin-bottom:20px;
             padding-left:0px;
+            font-family:sans-serif;
             font-size:12pt;}
 
-dd         {font-size:12pt;}
+dd         {font-size:12pt;
+            font-family:sans-serif;}
 
 p          {font-size:12pt;
             margin-left:20px;
@@ -65,7 +71,8 @@ p          {font-size:12pt;
             padding-left:0px;
             text-indent: 0pt;
             color:#000000;
-            line-height: 120%;
+            font-family:sans-serif;
+            line-height: 150%;
             text-align:left;}
 
 p#box      {border-width:1px;
@@ -77,6 +84,7 @@ p#box      {border-width:1px;
 
 tt         {font-size:12pt;
             font-weight:bold;
+            font-family:sans-serif;
             color:#8b0000;}
 
 pre        {font-size:12pt;
@@ -108,7 +116,10 @@ pre#prg    {font-size:12pt;
             background-color:fff4f0;
             color:#050070;}
 
+a          {font-family:sans-serif;}
 a:link     {text-decoration:none;color:#0000aa}
 a:visited  {text-decoration:none;color:#222299}
 a:active   {text-decoration:none;color:#0000ff}
 a:hover    {text-decoration:underline;}
+
+hr         {border-top: 3px double #aa7777;}
