@@ -95,16 +95,20 @@ or a data file. In the case of command line,</p>
 
 <dl>
 <dt> <b>-r</b>
-<dd>  Print thermal cross sections calculated from resonance parameters.
+<dd> Print thermal cross sections calculated from resonance parameters.
 
 <dt> <b>-e</b> <i>En</i>
-<dd>  Print a cross section at a given energy <i>En</i>.
+<dd> Print a cross section at a given energy <i>En</i> in MF3.
+     MT must be specified by <b>-f 3 -t MT </b>.
 
 <dt> <b>-v</b>
-<dd> Verbose mode when DeCE scans an input file.
+<dd> Verbose mode with annoying output.
 
 <dt> <b>-h</b>
 <dd> Print help, and quit.
+
+<dt> <b>-s</b>
+<dd> Print a complete list of MF/MT numbers in the file, and quit.
 </dl>
 
 
